# yardbot

./: .gitignore  detections.yaml  sabertooth_test_no_ros.py
.claude/: settings.local.json
install/: local_setup.sh  setup.sh
install/yardbot_bringup/lib/yardbot_bringup/: apriltag_overlay  depth_to_grid  qos_relay  sabertooth_node  sabertooth_test
install/yardbot_bringup/share/yardbot_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/yardbot_bringup/share/yardbot_bringup/launch/: nav2_bringup.launch.py  tags_bringup.launch.py
install/yardbot_description/share/yardbot_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/yardbot_bringup/: package.xml  package.xml.bak  setup.cfg  setup.py  setup.py.bak
src/yardbot_bringup/config/: apriltag_qos.yaml  nav2_params.yaml
src/yardbot_bringup/yardbot_bringup/: depth_to_grid_node.py
src/yardbot_description/: package.xml  setup.py
src/yardbot_description/launch/: robot_description.launch.py
src/yardbot_description/urdf/: yardbot.urdf.xacro
tmp/: yardbot.urdf
